--- a/Cargo.toml
+++ b/Cargo.toml
@@ -149,7 +149,7 @@ recursive = "0.1.1"
 regex = "1.8"
 rstest = "0.23.0"
 serde_json = "1"
-sqlparser = { version = "0.52.0", features = ["visitor"] }
+sqlparser = { git = "https://github.com/goldmedal/sqlparser-rs.git", branch = "wren/0.12.3-array-struct", features = ["visitor"] }
 tempfile = "3"
 tokio = { version = "1.36", features = ["macros", "rt", "sync"] }
 url = "2.2"
